--- a/s99-showcase/app/views/knighttour.scala.html
+++ b/s99-showcase/app/views/knighttour.scala.html
@@ -7,8 +7,8 @@
     <canvas id="board" width="500" height="500"></canvas>
     <script type="text/javascript">
       var board = document.getElementById("board");
-      drawBoard(board, @boardSize);
-      @path.map("drawPath(board, JSON.parse('" + _ + "'), " + boardSize + ");")
+      s99.knight.utils.drawBoard(board, @boardSize);
+      @path.map("s99.knight.utils.drawPath(board, JSON.parse('" + _ + "'), " + boardSize + ");")
     </script>
 
 }
