--- a/s99-showcase/app/views/main.scala.html
+++ b/s99-showcase/app/views/main.scala.html
@@ -3,7 +3,7 @@
     <head>
         <title>S99 Showcase</title>
         <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <script type="text/javascript" src="@routes.Assets.at("js/utils.js")"></script>
+        <script type="text/javascript" src="@routes.Assets.at("js/s99-showcase.js")"></script>
         <script type="text/javascript" src="@routes.Assets.at("js/underscore-min.js")"></script>
     </head>
     <body>
