--- a/s99-showcase/app/views/conway.scala.html
+++ b/s99-showcase/app/views/conway.scala.html
@@ -5,12 +5,10 @@
 
   <canvas id="board" width="500" height="500"></canvas>
   <script type="text/javascript">
-    var source = new EventSource("/conway/life")
+    var source = new EventSource("/conway/life"),
+        board = document.getElementById("board");
     source.onmessage = function(event) {
-      console.log(event.data)
-    }
-    source.onerror = function(event) {
-      console.log("EventSource fired an error")
+      s99.conway.life.draw(board, JSON.parse(event.data).lifeCells, 5);
     }
    </script>
 }
